--- a/Vpn/Server/Server.fsproj
+++ b/Vpn/Server/Server.fsproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Compile Include="ClientRegistry.fs" />
     <Compile Include="Nat.fs" />
+    <Compile Include="ExternalInterface.fs" />
     <Compile Include="PacketRouter.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Program.fs" />
