--- a/Vpn/Core/Core.fsproj
+++ b/Vpn/Core/Core.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Primitives.fs" />
     <Compile Include="Errors.fs" />
     <Compile Include="KeyManagement.fs" />
+    <Compile Include="PacketDebug.fs" />
     <Compile Include="ServiceInfo.fs" />
     <Compile Include="AppSettings.fs" />
   </ItemGroup>
