--- a/Vpn/Server/Server.fsproj
+++ b/Vpn/Server/Server.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Nat.fs" />
     <Compile Include="ExternalInterface.fs" />
     <Compile Include="DnsProxy.fs" />
+    <Compile Include="IcmpProxy.fs" />
     <Compile Include="PacketRouter.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Program.fs" />
