--- a/Vpn/VpnServer/appsettings.json
+++ b/Vpn/VpnServer/appsettings.json
@@ -13,6 +13,6 @@
     "VpnServerId": "{fb22de75-91c0-4adc-8d17-87078ea226a4}",
     "VpnSubnet": "10.66.77.0/24",
     "ServerKeyPath": "C:\\Keys\\VpnServer",
-    "ClientKeysPath": "C:\\Keys\\VpnClients"
+    "ClientKeysPath": "C:\\Keys\\VpnClient"
   }
 }
