--- a/Vpn/VpnClient/appsettings.json
+++ b/Vpn/VpnClient/appsettings.json
@@ -14,6 +14,8 @@
     "VpnServerId": "{fb22de75-91c0-4adc-8d17-87078ea226a4}",
     "ClientKeyPath": "C:\\Keys\\VpnClient",
     "ServerPublicKeyPath": "C:\\Keys\\VpnServer",
-    "LocalLanExclusions": "192.168.0.0/16;10.0.0.0/8;172.16.0.0/12;169.254.0.0/16;127.0.0.0/8"
+    "LocalLanExclusions": "192.168.0.0/16;10.0.0.0/8;172.16.0.0/12;169.254.0.0/16;127.0.0.0/8",
+    "UseEncryption": "true",
+    "EncryptionType": "AES"
   }
 }
