--- a/Vpn/VpnServer/log4net.config
+++ b/Vpn/VpnServer/log4net.config
@@ -6,7 +6,7 @@
     <datePattern value="yyyy-MM-dd'.log'" />
     <staticLogFileName value="false" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="# %date{yyyy-MM-dd HH:mm:ss.fff} # %-5level # %message %newline%newline" />
+      <conversionPattern value="# %date{yyyy-MM-dd HH:mm:ss.fff} # %-5level # %message %newline" />
     </layout>
   </appender>
   <root>
