--- a/Vpn/VpnClient/appsettings.json
+++ b/Vpn/VpnClient/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Information",
       "CoreWCF": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
