--- a/Sys/PreBuild.fsproj
+++ b/Sys/PreBuild.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Platforms>x64</Platforms>
     <AssemblyName>Softellect.PreBuild</AssemblyName>
     <Authors>Konstantin Konstantinov</Authors>
@@ -24,7 +24,8 @@
     <None Include="IncrementBuildNumber.fsx" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="9.0.303" />
+    <PackageReference Update="FSharp.Core" Version="10.0.101" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.3.6" />
   </ItemGroup>
   <Target Name="IncrementBuildNumber" BeforeTargets="CoreCompile">
     <Exec Command="dotnet fsi $(ProjectDir)IncrementBuildNumber.fsx" />
