--- a/Analytics/Analytics.fsproj
+++ b/Analytics/Analytics.fsproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
     <PlatformTarget>x64</PlatformTarget>
-    <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
+    <NoWarn>NU5100;NU5110;NU5111;NU1903;NU1701</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <None Include="ml32i4.dll" Pack="true">
