--- a/Apps/Vpn/VpnClientAdm/VpnClientAdm.fsproj
+++ b/Apps/Vpn/VpnClientAdm/VpnClientAdm.fsproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net10.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>VpnServerAdm</AssemblyName>
+        <AssemblyName>VpnClientAdm</AssemblyName>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
@@ -29,8 +29,8 @@
 
     <ItemGroup>
         <PackageReference Include="Argu" Version="6.2.5" />
-        <ProjectReference Include="..\..\Sys\Sys.fsproj" />
-        <ProjectReference Include="..\Core\Core.fsproj" />
+        <ProjectReference Include="..\..\..\Sys\Sys.fsproj" />
+        <ProjectReference Include="..\..\..\Vpn\Core\Core.fsproj" />
         <PackageReference Update="FSharp.Core" Version="10.0.101" />
     </ItemGroup>
 
