--- a/Apps/Vpn/VpnClient/appsettings.json
+++ b/Apps/Vpn/VpnClient/appsettings.json
@@ -9,7 +9,7 @@
   },
   "appSettings": {
     "ProjectName": "VpnClient",
-    "VpnClientAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45001;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
+    "VpnServerAccessInfo": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45001;httpServiceName=VpnService",
     "VpnClientId": "{10e38c19-d220-4852-8589-82eca51ade92}",
     "VpnServerId": "{fb22de75-91c0-4adc-8d17-87078ea226a4}",
     "ClientKeyPath": "C:\\Keys\\VpnClient",
