--- a/Apps/Vpn/VpnServer/appsettings.json
+++ b/Apps/Vpn/VpnServer/appsettings.json
@@ -9,7 +9,7 @@
   },
   "appSettings": {
     "ProjectName": "VpnServer",
-    "VpnServerAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45001;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
+    "VpnServerAccessInfo": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45001;httpServiceName=VpnService",
     "VpnServerId": "{fb22de75-91c0-4adc-8d17-87078ea226a4}",
     "VpnSubnet": "10.66.77.0/24",
     "ServerKeyPath": "C:\\Keys\\VpnServer",
