--- a/Apps/Vpn/VpnClient/VpnClient.fsproj
+++ b/Apps/Vpn/VpnClient/VpnClient.fsproj
@@ -36,7 +36,7 @@
 
     <ItemGroup>
         <None Include="-run.bat">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Include="..\..\..\Sys\BuildInfo.ps1" Link="BuildInfo.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -72,9 +72,42 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.1" />
-        <ProjectReference Include="..\VpnClientAdm\VpnClientAdm.fsproj" />
         <ProjectReference Include="..\..\..\Vpn\Client\Client.fsproj" />
         <PackageReference Update="FSharp.Core" Version="10.0.101" />
     </ItemGroup>
+
+    <!-- Build + copy VpnClientAdm into this project's output folder WITHOUT referencing it -->
+    <PropertyGroup>
+        <vpnClientAdmProject>..\VpnClientAdm\VpnClientAdm.fsproj</vpnClientAdmProject>
+
+        <!-- Must match VpnClientAdm.fsproj TargetFramework -->
+        <vpnClientAdmTfm>net10.0-windows</vpnClientAdmTfm>
+
+        <vpnClientAdmOutDir>..\VpnClientAdm\bin\$(Platform)\$(Configuration)\$(vpnClientAdmTfm)\</vpnClientAdmOutDir>
+    </PropertyGroup>
+
+    <!-- Must run BEFORE VpnClient compiles, but after $(TargetDir) is established -->
+    <Target Name="buildAndCopyVpnClientAdm" BeforeTargets="CoreCompile">
+        <!-- Build admin app explicitly (no ProjectReference) -->
+        <MSBuild Projects="$(vpnClientAdmProject)"
+                 Targets="Build"
+                 Properties="Configuration=$(Configuration);Platform=$(Platform)" />
+
+        <!-- Ensure VpnClient output folder exists -->
+        <MakeDir Directories="$(TargetDir)" />
+
+        <!-- Copy ALL files from VpnClientAdm output folder into VpnClient output folder -->
+        <ItemGroup>
+            <vpnClientAdmAllFiles Include="$(vpnClientAdmOutDir)**\*.*" />
+            <vpnClientAdmDestDirs Include="@(vpnClientAdmAllFiles->'$(TargetDir)%(RecursiveDir)')" />
+        </ItemGroup>
+
+        <!-- Ensure subfolders exist (if any) -->
+        <MakeDir Directories="@(vpnClientAdmDestDirs)" />
+
+        <Copy SourceFiles="@(vpnClientAdmAllFiles)"
+              DestinationFiles="@(vpnClientAdmAllFiles->'$(TargetDir)%(RecursiveDir)%(Filename)%(Extension)')"
+              SkipUnchangedFiles="true" />
+    </Target>
 
 </Project>
