--- a/Vpn/Client/Client.fsproj
+++ b/Vpn/Client/Client.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="WcfClient.fs" />
     <Compile Include="UdpClient.fs" />
     <Compile Include="Service.fs" />
+    <Compile Include="AdminService.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
