--- a/Apps/Vpn/VpnClient/appsettings.json
+++ b/Apps/Vpn/VpnClient/appsettings.json
@@ -18,6 +18,6 @@
     "UseEncryption": "true",
     "EncryptionType": "AES",
     "AdminAccessInfo": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45002;httpServiceName=VpnAdmService",
-    "AutoStart": "false"
+    "AutoStart": "true"
   }
 }
