--- a/Vpn/Interop/Interop.csproj
+++ b/Vpn/Interop/Interop.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Sys\Sys.fsproj" />
+    <ProjectReference Include="..\Core\Core.fsproj" />
   </ItemGroup>
 </Project>
