--- a/Vpn/LinuxServer/LinuxServer.fsproj
+++ b/Vpn/LinuxServer/LinuxServer.fsproj
@@ -17,6 +17,10 @@
     <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <!-- Linux-specific files -->
+    <Compile Include="TunAdapter.fs" />
+  </ItemGroup>
+  <ItemGroup>
     <!-- Linked files from Vpn\Server -->
     <Compile Include="..\Server\ClientRegistry.fs" Link="ClientRegistry.fs" />
     <Compile Include="..\Server\Nat.fs" Link="Nat.fs" />
