--- a/Apps/Vpn/VpnServerLinux/VpnServerLinux.fsproj
+++ b/Apps/Vpn/VpnServerLinux/VpnServerLinux.fsproj
@@ -5,6 +5,7 @@
         <TargetFramework>net10.0</TargetFramework>
         <Platforms>x64</Platforms>
         <PlatformTarget>x64</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
         <AssemblyName>VpnServerLinux</AssemblyName>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <DefineConstants>$(DefineConstants);LINUX</DefineConstants>
