--- a/Apps/Vpn/VpnClient/appsettings.json
+++ b/Apps/Vpn/VpnClient/appsettings.json
@@ -19,5 +19,9 @@
     "EncryptionType": "AES",
     "AdminAccessInfo": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45002;httpServiceName=VpnAdmService",
     "AutoStart": "true"
+  },
+  "vpnConnections": {
+    "VPN Connection 1": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45001;httpServiceName=VpnService",
+    "VPN Connection 2": "HttpServiceInfo|httpServiceAddress=127.0.0.1;httpServicePort=45001;httpServiceName=VpnService"
   }
 }
