--- a/Vpn/Client/Client.fsproj
+++ b/Vpn/Client/Client.fsproj
@@ -17,6 +17,7 @@
     <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="NetworkDetector.fs" />
     <Compile Include="Tunnel.fs" />
     <Compile Include="WcfClient.fs" />
     <Compile Include="UdpClient.fs" />
