--- a/Linux/Core/Core.fsproj
+++ b/Linux/Core/Core.fsproj
@@ -17,13 +17,14 @@
     <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <!-- UdpProtocol must come before Primitives (Primitives depends on PushSessionId) -->
+    <Compile Include="..\..\Transport\UdpProtocol.fs" Link="UdpProtocol.fs" />
     <!-- Linked files from Vpn\Core -->
     <Compile Include="..\..\Vpn\Core\Primitives.fs" Link="Primitives.fs" />
     <Compile Include="..\..\Vpn\Core\Errors.fs" Link="Errors.fs" />
     <Compile Include="..\..\Vpn\Core\KeyManagement.fs" Link="KeyManagement.fs" />
     <Compile Include="..\..\Vpn\Core\PacketDebug.fs" Link="PacketDebug.fs" />
     <Compile Include="..\..\Vpn\Core\ServiceInfo.fs" Link="ServiceInfo.fs" />
-    <Compile Include="..\..\Vpn\Core\UdpProtocol.fs" Link="UdpProtocol.fs" />
     <Compile Include="..\..\Vpn\Core\AppSettings.fs" Link="AppSettings.fs" />
   </ItemGroup>
   <ItemGroup>
