--- a/Vnc/Interop/Interop.csproj
+++ b/Vnc/Interop/Interop.csproj
@@ -2,34 +2,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <AssemblyName>Softellect.Vpn.Core</AssemblyName>
+    <AssemblyName>Softellect.Vnc.Interop</AssemblyName>
     <Platforms>x64</Platforms>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
     <PlatformTarget>x64</PlatformTarget>
     <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
-    <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
     <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Primitives.fs" />
-    <Compile Include="Errors.fs" />
-    <Compile Include="KeyManagement.fs" />
-    <Compile Include="PacketDebug.fs" />
-    <Compile Include="ServiceInfo.fs" />
-    <Compile Include="AppSettings.fs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Sys\Sys.fsproj" />
-    <ProjectReference Include="..\..\Wcf\Wcf.fsproj" />
-    <ProjectReference Include="..\..\Transport\Transport.fsproj" />
+    <ProjectReference Include="..\Core\Core.fsproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="10.0.102" />
+    <PackageReference Include="Vortice.Direct3D11" Version="3.8.1" />
+    <PackageReference Include="Vortice.DXGI" Version="3.8.1" />
   </ItemGroup>
 </Project>
